--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="header">
-  <h3 i18n="application name">My App</h3>
+  <h3 i18n="application name@@appName">My App</h3>
   <div>
     <a href="../en" i18n="locale code for English language">EN</a>
     <a href="../fr" i18n="locale code for French language">FR</a>
   </div>
 </div>
 <div class="modes">
-  <a routerLink="/view" i18n="View details of user">View</a>
-  <a routerLink="/edit" i18n="Edit details of user">Edit</a>
+  <a routerLink="/view" i18n="View details of user@@viewroute">View</a>
+  <a routerLink="/edit" i18n="Edit details of user@@editroute">Edit</a>
 </div>
