--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer i18n="copyright information">
-  <span class="footer">copyright (c) 2018</span>
+<footer>
+  <span i18n="copyright information@@copyright" class="footer">copyright (c) 2018</span>
 </footer>
